<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingHorizontal="11dp"
            android:paddingVertical="18dp"
            android:paddingStart="23dp"
            android:text="@string/singup"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/image_close_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingHorizontal="11dp"
            android:paddingVertical="18dp"
            android:paddingEnd="7dp"

            android:src="@drawable/ic_close" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="21dp"
        android:paddingTop="5dp"
        android:text="@string/welcom"
        android:textColor="#1A1824"
        android:textSize="31dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_logEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="19dp"
        android:hint="@string/email"
        android:textColorHint="@color/emai_pass_hint"
        app:backgroundTint="@color/black"

        />

    <EditText
        android:id="@+id/password_logEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="19dp"
        android:hint="@string/password"
        android:textColorHint="@color/emai_pass_hint"
        app:backgroundTint="@color/black"
        android:inputType="textPassword"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/forgetTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/forget"
        android:textColor="@color/black_text"
        android:textSize="14dp" />

    <Button
        android:id="@+id/loginButon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/but_sing"
        android:text="@string/Signin"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
