<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical"
    tools:context=".Forgot_passwordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:paddingHorizontal="11dp"
            android:paddingVertical="18dp"
            android:src="@drawable/back_re" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="21dp"
        android:paddingHorizontal="18dp"
        android:paddingTop="5dp"
        android:text="@string/forget1"
        android:textColor="#1A1824"
        android:textSize="31dp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:paddingTop="5dp"
        android:text="@string/enter"
        android:textColor="#1A1824"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="19dp"
        android:hint="@string/email"
        android:textColorHint="@color/emai_pass_hint"
        app:backgroundTint="@color/black"


        />

    <View
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"></View>

    <Button
        android:id="@+id/recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/but_sing"
        android:text="@string/Recover_password"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>