<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit1Activity"
    android:background="@color/purple"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView

            android:paddingHorizontal="11dp"

            android:paddingVertical="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:src="@drawable/ic_left"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></View>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/pickershap"/>



    </LinearLayout>
    <LinearLayout
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="24dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:backgroundTint="@color/white"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:paddingStart="8dp"
            android:text="@string/date"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginBottom="7dp"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:text="@string/note_app_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
        <TextView
            android:textSize="16dp"
            android:paddingTop="7dp"
            android:layout_marginStart="10dp"
            android:text="@string/app_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />



    </LinearLayout>


</LinearLayout>
