<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".EditNote">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="11dp"
            android:paddingVertical="18dp"

            android:src="@drawable/ic_left" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></View>


        <ImageView
            android:id="@+id/change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/pickershap" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp">

        <CheckBox
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:buttonTint="@color/white"
            android:paddingStart="8dp"
            android:text="@string/date" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:text="@string/note_app_design"
            android:textColor="#000000"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/note_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:paddingTop="7dp"
            android:text="@string/app_w"
            android:textColor="#000000"
            android:textSize="16dp" />


    </LinearLayout>


</LinearLayout>
